RESOLVED FIXED98473
SVGAttributeHashTranslator does not need to copy QualifiedName in the common case
https://bugs.webkit.org/show_bug.cgi?id=98473
Summary SVGAttributeHashTranslator does not need to copy QualifiedName in the common ...
Eric Seidel (no email)
Reported 2012-10-04 18:51:53 PDT
SVGAttributeHashTranslator does not need to copy QualifiedName in the common case
Attachments
Patch (1.80 KB, patch)
2012-10-04 18:52 PDT, Eric Seidel (no email)
no flags
Patch (1.99 KB, patch)
2012-10-04 18:56 PDT, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 2012-10-04 18:52:07 PDT
Eric Seidel (no email)
Comment 2 2012-10-04 18:52:44 PDT
This makes SVG animation (and anything that changes SVG attributes) much slower than necessary.
Eric Seidel (no email)
Comment 3 2012-10-04 18:53:36 PDT
I found this while working on another bug. I sampled my test case and found this code to be super-hot. This patch made the most of the samples in this area go away. :)
Eric Seidel (no email)
Comment 4 2012-10-04 18:56:13 PDT
WebKit Review Bot
Comment 5 2012-10-04 21:22:22 PDT
Comment on attachment 167222 [details] Patch Clearing flags on attachment: 167222 Committed r130456: <http://trac.webkit.org/changeset/130456>
WebKit Review Bot
Comment 6 2012-10-04 21:22:25 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 7 2012-10-05 17:14:52 PDT
Oh my god! Good one.
Note You need to log in before you can comment on or make changes to this bug.